[tool.poetry]
name = "hioki-im758s-demo"
version = "0.1.0"
description = ""
authors = ["Tom CzHen <tom.czhen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
pyvisa = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
